fix: sticky footer z-index Codeinwp/neve-pro-addon#2092

--- a/assets/scss/components/hfg/frontend/layout/_footer.scss
+++ b/assets/scss/components/hfg/frontend/layout/_footer.scss
@@ -1,6 +1,6 @@
 .site-footer {
 	position: relative;
-	z-index: 10;
+	z-index: 11;
 
 	.item--inner {
 		width: 100%;
